# currency

./: Cargo.toml  codes_unique_sorted.txt  db.sqlite3  schema.sql
src/: lib.rs  main.rs
