[package]
name = "currency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0.0"
regex = "1.5.6"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.82"
rusqlite = "0.28.0"
